# Jarvis2Brain

./: .gitignore  pyproject.toml
brain/: audit.py  cli.py  daemon.py  embed.py  events.py  git_versioning.py  graph_html.py  index.py  links.py  mcp.py  memory.py  nn.py  note.py  policy.py  rerank.py  search.py  server.py  skill.py  slug.py  vault.py
brain/loops/: auto_classify.py  constitution.py  reflexion.py  skill_synthesis.py  train_brain.py
brain/skills/: __init__.py  brain_meta.py  graph.py  links.py  notes.py  search.py
brain/skills/effectors/: __init__.py  claude_code.py  file_ops.py  terminal.py
scripts/: migrate_jarvis2_sqlite.py  migrate_v01_to_v02.py
tests/: test_audit.py  test_auto_classify.py  test_cli.py  test_constitution.py  test_daemon.py  test_effectors.py  test_embed.py  test_events.py  test_index.py  test_links.py  test_memory.py  test_migrate_jarvis2.py  test_migration.py  test_nn.py  test_note.py  test_note_v2.py  test_policy.py  test_reflexion.py  test_rerank.py  test_search.py  test_search_hybrid.py  test_server.py  test_skill.py  test_skill_synthesis.py  test_skills_http.py  test_slug.py  test_train_brain.py  test_vault.py  test_vault_v2.py  test_versioning.py  test_websocket.py
